Bug 246103 - Disallow creation of 0% interest rate loans
Summary: Disallow creation of 0% interest rate loans
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-29 02:12 UTC by Alvaro Soliverez
Modified: 2010-07-29 02:57 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alvaro Soliverez 2010-07-29 02:12:45 UTC
Version:           unspecified (using KDE 4.4.5) 
OS:                Linux

Creating loans with 0% interest causes issues later down the chain. For now, we will close the loophole to create such loans.

Reproducible: Always
Comment 1 Alvaro Soliverez 2010-07-29 02:57:35 UTC
SVN commit 1156367 by asoliverez:

Throw a warning if the interest rate for a loan is 0.

BUG:246103

 M  +6 -0      newaccountwizard/knewaccountwizard.cpp  
 M  +6 -0      newloanwizard/knewloanwizard.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1156367