Throw a warning if the interest rate for a loan is 0.

BUG:246103

svn path=/trunk/extragear/office/kmymoney/; revision=1156367